--- a/app/index.html
+++ b/app/index.html
@@ -17,13 +17,13 @@
             <nav class="fullscreen-menu__nav">
                 <ul class="fullscreen__nav__list">
                     <li class="fullscreen__nav__list__item">
-                        <a class="regular-ninteen" href="#">Главная</a>
+                        <a class="regular-ninteen" href="../app/index.html">Главная</a>
                         <span class="arrow-cover">
                             <img class="arrow" src="img/Icon/Dark/next.svg" alt="icon">
                         </span>
                     </li>
                     <li class="fullscreen__nav__list__item curent-hover">
-                        <a class="regular-ninteen" href="#">Товары</a>
+                        <a class="regular-ninteen" href="product.html">Товары</a>
                         <span class="arrow-cover">
                             <img class="arrow" src="img/Icon/Dark/next.svg" alt="icon">
                         </span>
@@ -66,13 +66,13 @@
                         </ul>
                     </li>
                     <li class="fullscreen__nav__list__item">
-                        <a class="regular-ninteen" href="#">Контакты</a>
+                        <a class="regular-ninteen" href="contact.html">Контакты</a>
                         <span class="arrow-cover">
                             <img class="arrow" src="img/Icon/Dark/next.svg" alt="icon">
                         </span>
                     </li>
                     <li class="fullscreen__nav__list__item">
-                        <a class="regular-ninteen" href="#">О нас</a>
+                        <a class="regular-ninteen" href="about.html">О нас</a>
                         <span class="arrow-cover">
                             <img class="arrow" src="img/Icon/Dark/next.svg" alt="icon">
                         </span>
@@ -444,7 +444,7 @@
         <section class="category">
             <div class="container">
                 <div class="row justify-content-between">
-                    <div class="col">
+                    <div class="col-md-4 col-sm-12">
                         <div class="category__cart">
                             <img class="category__cart__img" src="img/category_1.JPG" alt="Image Category">
                             <div class="category__cart__text">
@@ -453,7 +453,7 @@
                             </div>
                         </div>
                     </div>
-                    <div class="col">
+                    <div class="col-md-4 col-sm-12">
                         <div class="category__cart">
                             <img class="category__cart__img" src="img/category_2.jpg" alt="Image Category">
                             <div class="category__cart__text">
@@ -462,7 +462,7 @@
                             </div>
                         </div>
                     </div>
-                    <div class="col">
+                    <div class="col-md-4 col-sm-12">
                         <div class="category__cart">
                             <div class="category__cart__text">
                                 <h2 class="cart-title h2-style">Ещё</h2>
@@ -787,7 +787,7 @@
             <div class="footer__links__top">
                 <div class="container">
                     <div class="row">
-                        <div class="col">
+                        <div class="col-md-3 col-sm-6">
                             <nav class="footer-menu">
                                 <ul class="footer-menu__list">
                                     <li class="footer-menu__list__item">
@@ -808,7 +808,7 @@
                                 </ul>
                             </nav>
                         </div>
-                        <div class="col">
+                        <div class="col-md-3 col-sm-6">
                             <nav class="footer-menu">
                                 <ul class="footer-menu__list">
                                     <li class="footer-menu__list__item">
@@ -829,7 +829,7 @@
                                 </ul>
                             </nav>
                         </div>
-                        <div class="col">
+                        <div class="col-md-3 col-sm-6">
                             <nav class="footer-menu">
                                 <ul class="footer-menu__list">
                                     <li class="footer-menu__list__item">
@@ -847,7 +847,7 @@
                                 </ul>
                             </nav>
                         </div>
-                        <div class="col">
+                        <div class="col-md-3 col-sm-6">
                             <nav class="footer-menu">
                                 <ul class="footer-menu__list">
                                     <li class="footer-menu__list__item">
@@ -878,7 +878,7 @@
             <div class="footer__links__bottom">
                 <div class="container">
                     <div class="row">
-                        <div class="col">
+                        <div class="col-md-8 col-sm-12">
                             <nav class="footer-menu-bottom">
                                 <ul class="footer-menu-bottom__list">
                                     <li class="footer-menu-bottom__list__item">
@@ -893,7 +893,7 @@
                                 </ul>
                             </nav>
                         </div>
-                        <div class="col">
+                        <div class="col-md-4 col-sm-12">
                             <p class="footer-text-bottom lights-fiveteen">©2020 — Все права защищены</p>
                         </div>
                     </div>
