--- a/app/product-single.html
+++ b/app/product-single.html
@@ -17,7 +17,7 @@
             <nav class="fullscreen-menu__nav">
                 <ul class="fullscreen__nav__list">
                     <li class="fullscreen__nav__list__item">
-                        <a class="regular-ninteen" href="#">Главная</a>
+                        <a class="regular-ninteen" href="index.html">Главная</a>
                         <span class="arrow-cover">
                             <img class="arrow" src="img/Icon/Dark/next.svg" alt="icon">
                         </span>
@@ -66,13 +66,13 @@
                         </ul>
                     </li>
                     <li class="fullscreen__nav__list__item">
-                        <a class="regular-ninteen" href="#">Контакты</a>
+                        <a class="regular-ninteen" href="contact.html">Контакты</a>
                         <span class="arrow-cover">
                             <img class="arrow" src="img/Icon/Dark/next.svg" alt="icon">
                         </span>
                     </li>
                     <li class="fullscreen__nav__list__item">
-                        <a class="regular-ninteen" href="#">О нас</a>
+                        <a class="regular-ninteen" href="about.html">О нас</a>
                         <span class="arrow-cover">
                             <img class="arrow" src="img/Icon/Dark/next.svg" alt="icon">
                         </span>
