--- a/app/cart.html
+++ b/app/cart.html
@@ -590,7 +590,7 @@
             <div class="footer__links__bottom">
                 <div class="container">
                     <div class="row">
-                        <div class="col">
+                        <div class="col-md-8 col-sm-12">
                             <nav class="footer-menu-bottom">
                                 <ul class="footer-menu-bottom__list">
                                     <li class="footer-menu-bottom__list__item">
@@ -605,7 +605,7 @@
                                 </ul>
                             </nav>
                         </div>
-                        <div class="col">
+                        <div class="col-md-4 col-sm-12">
                             <p class="footer-text-bottom lights-fiveteen">©2020 — Все права защищены</p>
                         </div>
                     </div>
