--- a/app/index.html
+++ b/app/index.html
@@ -794,7 +794,7 @@
                                         <a class="list-title medium-ninteen" href="#">Покупателям</a>
                                     </li>
                                     <li class="footer-menu__list__item">
-                                        <a class="light-seventeen" href="#">Доставка и оплата</a>
+                                        <a class="light-seventeen" href="answer-questions.html">Доставка и оплата</a>
                                     </li>
                                     <li class="footer-menu__list__item">
                                         <a class="light-seventeen" href="#">Возврат</a>
