--- a/app/about.html
+++ b/app/about.html
@@ -17,13 +17,13 @@
             <nav class="fullscreen-menu__nav">
                 <ul class="fullscreen__nav__list">
                     <li class="fullscreen__nav__list__item">
-                        <a class="regular-ninteen" href="#">Главная</a>
+                        <a class="regular-ninteen" href="index.html">Главная</a>
                         <span class="arrow-cover">
                             <img class="arrow" src="img/Icon/Dark/next.svg" alt="icon">
                         </span>
                     </li>
                     <li class="fullscreen__nav__list__item curent-hover">
-                        <a class="regular-ninteen" href="#">Товары</a>
+                        <a class="regular-ninteen" href="product.html">Товары</a>
                         <span class="arrow-cover">
                             <img class="arrow" src="img/Icon/Dark/next.svg" alt="icon">
                         </span>
@@ -66,13 +66,13 @@
                         </ul>
                     </li>
                     <li class="fullscreen__nav__list__item">
-                        <a class="regular-ninteen" href="#">Контакты</a>
+                        <a class="regular-ninteen" href="contact.html">Контакты</a>
                         <span class="arrow-cover">
                             <img class="arrow" src="img/Icon/Dark/next.svg" alt="icon">
                         </span>
                     </li>
                     <li class="fullscreen__nav__list__item">
-                        <a class="regular-ninteen" href="#">О нас</a>
+                        <a class="regular-ninteen" href="about.html">О нас</a>
                         <span class="arrow-cover">
                             <img class="arrow" src="img/Icon/Dark/next.svg" alt="icon">
                         </span>
@@ -283,9 +283,9 @@
                         </nav>    
                         <nav class="site-menu">       
                             <ul class="site-menu__links">
-                                <li><a class="light-thirteen" href="#">Оплата и доставка</a></li>
-                                <li><a class="light-thirteen" href="#">Как купить?</a></li>
-                                <li><a class="light-thirteen" href="#">Поддержка</a></li>
+                                <li><a class="light-thirteen" href="answer-questions.html">Оплата и доставка</a></li>
+                                <li><a class="light-thirteen" href="answer-questions.html">Как купить?</a></li>
+                                <li><a class="light-thirteen" href="contact.html">Поддержка</a></li>
                             </ul>
                         </nav>                  
                     </div>
@@ -318,7 +318,7 @@
                                 <ul class="main-menu__links">
                                     <li class="main-menu__item"><a class="regular-seventeen" href="index.html">Главная</a></li>
                                     <li class="main-menu__item">
-                                        <a class="regular-seventeen" href="#">Товары</a>
+                                        <a class="regular-seventeen" href="product.html">Товары</a>
                                         <ul class="sub-nav">
                                             <li class="sub-nav__item">
                                                 <a class="medium-ninteen" href="#">Категории</a>
@@ -348,8 +348,8 @@
                                             </li>
                                         </ul>
                                     </li>
-                                    <li class="main-menu__item"><a class="regular-seventeen" href="#">Контакты</a></li>
-                                    <li class="main-menu__item"><a class="regular-seventeen" href="#">О нас</a></li>
+                                    <li class="main-menu__item"><a class="regular-seventeen" href="contact.html">Контакты</a></li>
+                                    <li class="main-menu__item"><a class="regular-seventeen" href="about.html">О нас</a></li>
                                 </ul>
                             </nav>
                         </div>
@@ -378,7 +378,7 @@
                                         </button>
                                     </li>
                                     <li>
-                                        <a href="#" class="like-icon">
+                                        <a href="like.html" class="like-icon">
                                             <!-- <img src="img/Icon/Like.svg" width="45px" height="45px" alt="Понравившиеся"> -->
                                             <svg xmlns="http://www.w3.org/2000/svg" width="45" height="45" viewBox="0 0 45 45"><g transform="translate(11 -16.534)"><g transform="translate(0 28.534)"><path d="M11.295,48.606c-.476-.412-.718-.646-3.262-2.809C3.2,41.683,0,38.966,0,35a6.158,6.158,0,0,1,6-6.464,5.975,5.975,0,0,1,5.294,3.574,5.975,5.975,0,0,1,5.294-3.574,6.158,6.158,0,0,1,6,6.464c0,3.967-3.2,6.685-8.033,10.8C12,47.97,11.792,48.175,11.295,48.606ZM6,29.858c-2.666,0-4.677,2.21-4.677,5.141,0,3.356,3.01,5.915,7.567,9.79.772.657,1.567,1.332,2.4,2.06.837-.728,1.632-1.4,2.4-2.06,4.557-3.875,7.567-6.435,7.567-9.79,0-2.931-2.011-5.141-4.677-5.141-2.407,0-4.1,2.158-4.657,4.147v0l-1.275,0h0C10.169,32.248,8.585,29.858,6,29.858Z" transform="translate(0 -28.534)" fill="#fff"/></g></g><rect width="45" height="45" fill="none"/></svg>
                                         </a>
@@ -613,16 +613,16 @@
                                             <a class="list-title medium-ninteen" href="#">Покупателям</a>
                                         </li>
                                         <li class="footer-menu__list__item">
-                                            <a class="light-seventeen" href="#">Доставка и оплата</a>
+                                            <a class="light-seventeen" href="answer-questions.html">Доставка и оплата</a>
                                         </li>
                                         <li class="footer-menu__list__item">
-                                            <a class="light-seventeen" href="#">Возврат</a>
+                                            <a class="light-seventeen" href="answer-questions.html">Возврат</a>
                                         </li>
                                         <li class="footer-menu__list__item">
-                                            <a class="light-seventeen" href="#">Отзывы</a>
+                                            <a class="light-seventeen" href="about.html">Отзывы</a>
                                         </li>
                                         <li class="footer-menu__list__item">
-                                            <a class="light-seventeen" href="#">Как купить?</a>
+                                            <a class="light-seventeen" href="answer-questions.html">Как купить?</a>
                                         </li>
                                     </ul>
                                 </nav>
@@ -634,16 +634,13 @@
                                             <a class="list-title medium-ninteen" href="#">Информация</a>
                                         </li>
                                         <li class="footer-menu__list__item">
-                                            <a class="light-seventeen" href="#">О компании</a>
+                                            <a class="light-seventeen" href="about.html">О компании</a>
                                         </li>
                                         <li class="footer-menu__list__item">
-                                            <a class="light-seventeen" href="#">Контакты</a>
+                                            <a class="light-seventeen" href="contact.html">Контакты</a>
                                         </li>
                                         <li class="footer-menu__list__item">
-                                            <a class="light-seventeen" href="#">Вакансии</a>
-                                        </li>
-                                        <li class="footer-menu__list__item">
-                                            <a class="light-seventeen" href="#">Поддержка?</a>
+                                            <a class="light-seventeen" href="contact.html">Поддержка</a>
                                         </li>
                                     </ul>
                                 </nav>
@@ -701,13 +698,13 @@
                                 <nav class="footer-menu-bottom">
                                     <ul class="footer-menu-bottom__list">
                                         <li class="footer-menu-bottom__list__item">
-                                            <a class="lights-fiveteen" href="#">Постовщикам</a>
+                                            <a class="lights-fiveteen" href="answer-questions.html">Постовщикам</a>
                                         </li>
                                         <li class="footer-menu-bottom__list__item">
-                                            <a class="lights-fiveteen" href="#">Как купить?</a>
+                                            <a class="lights-fiveteen" href="answer-questions.html">Как купить?</a>
                                         </li>
                                         <li class="footer-menu-bottom__list__item">
-                                            <a class="lights-fiveteen" href="#">Поддержка</a>
+                                            <a class="lights-fiveteen" href="contact.html">Поддержка</a>
                                         </li>
                                     </ul>
                                 </nav>
