--- a/app/answer-questions.html
+++ b/app/answer-questions.html
@@ -277,9 +277,9 @@
                         </nav>    
                         <nav class="site-menu">       
                             <ul class="site-menu__links">
-                                <li><a class="light-thirteen" href="#">Оплата и доставка</a></li>
-                                <li><a class="light-thirteen" href="#">Как купить?</a></li>
-                                <li><a class="light-thirteen" href="#">Поддержка</a></li>
+                                <li><a class="light-thirteen" href="answer-questions.html">Оплата и доставка</a></li>
+                                <li><a class="light-thirteen" href="answer-questions.html">Как купить?</a></li>
+                                <li><a class="light-thirteen" href="contact.html">Поддержка</a></li>
                             </ul>
                         </nav>                  
                     </div>
@@ -312,7 +312,7 @@
                                 <ul class="main-menu__links">
                                     <li class="main-menu__item"><a class="regular-seventeen" href="index.html">Главная</a></li>
                                     <li class="main-menu__item">
-                                        <a class="regular-seventeen" href="#">Товары</a>
+                                        <a class="regular-seventeen" href="product.html">Товары</a>
                                         <ul class="sub-nav">
                                             <li class="sub-nav__item">
                                                 <a class="medium-ninteen" href="#">Категории</a>
@@ -342,8 +342,8 @@
                                             </li>
                                         </ul>
                                     </li>
-                                    <li class="main-menu__item"><a class="regular-seventeen" href="#">Контакты</a></li>
-                                    <li class="main-menu__item"><a class="regular-seventeen" href="#">О нас</a></li>
+                                    <li class="main-menu__item"><a class="regular-seventeen" href="contact.html">Контакты</a></li>
+                                    <li class="main-menu__item"><a class="regular-seventeen" href="about.html">О нас</a></li>
                                 </ul>
                             </nav>
                         </div>
@@ -400,7 +400,7 @@
                      <h1 class="h1-style">Ответы на вопросы</h1>
                      <div class="start-img__breadcrumbs">
                         <ul class="start-img__breadcrumbs__list">
-                            <li class="start-img__breadcrumbs__list__item"><a href="#">Главная</a></li>
+                            <li class="start-img__breadcrumbs__list__item"><a href="index.html">Главная</a></li>
                             <li class="start-img__breadcrumbs__list__item"><a href="#">Ответы</a></li>
                         </ul>
                     </div>
@@ -542,13 +542,13 @@
                                             <a class="light-seventeen" href="answer-questions.html">Доставка и оплата</a>
                                         </li>
                                         <li class="footer-menu__list__item">
-                                            <a class="light-seventeen" href="#">Возврат</a>
+                                            <a class="light-seventeen" href="answer-questions.html">Возврат</a>
                                         </li>
                                         <li class="footer-menu__list__item">
-                                            <a class="light-seventeen" href="#">Отзывы</a>
+                                            <a class="light-seventeen" href="about.html">Отзывы</a>
                                         </li>
                                         <li class="footer-menu__list__item">
-                                            <a class="light-seventeen" href="#">Как купить?</a>
+                                            <a class="light-seventeen" href="answer-questions.html">Как купить?</a>
                                         </li>
                                     </ul>
                                 </nav>
@@ -560,16 +560,13 @@
                                             <a class="list-title medium-ninteen" href="#">Информация</a>
                                         </li>
                                         <li class="footer-menu__list__item">
-                                            <a class="light-seventeen" href="#">О компании</a>
+                                            <a class="light-seventeen" href="about.html">О компании</a>
                                         </li>
                                         <li class="footer-menu__list__item">
-                                            <a class="light-seventeen" href="#">Контакты</a>
+                                            <a class="light-seventeen" href="contact.html">Контакты</a>
                                         </li>
                                         <li class="footer-menu__list__item">
-                                            <a class="light-seventeen" href="#">Вакансии</a>
-                                        </li>
-                                        <li class="footer-menu__list__item">
-                                            <a class="light-seventeen" href="#">Поддержка?</a>
+                                            <a class="light-seventeen" href="contact.html">Поддержка</a>
                                         </li>
                                     </ul>
                                 </nav>
@@ -627,13 +624,13 @@
                                 <nav class="footer-menu-bottom">
                                     <ul class="footer-menu-bottom__list">
                                         <li class="footer-menu-bottom__list__item">
-                                            <a class="lights-fiveteen" href="#">Постовщикам</a>
+                                            <a class="lights-fiveteen" href="answer-questions.html">Постовщикам</a>
                                         </li>
                                         <li class="footer-menu-bottom__list__item">
-                                            <a class="lights-fiveteen" href="#">Как купить?</a>
+                                            <a class="lights-fiveteen" href="answer-questions.html">Как купить?</a>
                                         </li>
                                         <li class="footer-menu-bottom__list__item">
-                                            <a class="lights-fiveteen" href="#">Поддержка</a>
+                                            <a class="lights-fiveteen" href="contact.html">Поддержка</a>
                                         </li>
                                     </ul>
                                 </nav>
