--- a/app/index.html
+++ b/app/index.html
@@ -17,7 +17,7 @@
             <nav class="fullscreen-menu__nav">
                 <ul class="fullscreen__nav__list">
                     <li class="fullscreen__nav__list__item">
-                        <a class="regular-ninteen" href="../app/index.html">Главная</a>
+                        <a class="regular-ninteen" href="index.html">Главная</a>
                         <span class="arrow-cover">
                             <img class="arrow" src="img/Icon/Dark/next.svg" alt="icon">
                         </span>
@@ -287,7 +287,7 @@
                             <ul class="site-menu__links">
                                 <li><a class="light-thirteen" href="answer-questions.html">Оплата и доставка</a></li>
                                 <li><a class="light-thirteen" href="answer-questions.html">Как купить?</a></li>
-                                <li><a class="light-thirteen" href="answer-questions.html">Поддержка</a></li>
+                                <li><a class="light-thirteen" href="contact.html">Поддержка</a></li>
                             </ul>
                         </nav>                  
                     </div>
@@ -318,7 +318,7 @@
                             </div>
                             <nav class="main-menu"> 
                                 <ul class="main-menu__links">
-                                    <li class="main-menu__item"><a class="regular-seventeen" href="#">Главная</a></li>
+                                    <li class="main-menu__item"><a class="regular-seventeen" href="index.html">Главная</a></li>
                                     <li class="main-menu__item">
                                         <a class="regular-seventeen" href="product.html">Товары</a>
                                         <ul class="sub-nav">
@@ -797,13 +797,13 @@
                                         <a class="light-seventeen" href="answer-questions.html">Доставка и оплата</a>
                                     </li>
                                     <li class="footer-menu__list__item">
-                                        <a class="light-seventeen" href="#">Возврат</a>
+                                        <a class="light-seventeen" href="answer-questions.html">Возврат</a>
                                     </li>
                                     <li class="footer-menu__list__item">
-                                        <a class="light-seventeen" href="#">Отзывы</a>
+                                        <a class="light-seventeen" href="about.html">Отзывы</a>
                                     </li>
                                     <li class="footer-menu__list__item">
-                                        <a class="light-seventeen" href="#">Как купить?</a>
+                                        <a class="light-seventeen" href="answer-questions.html">Как купить?</a>
                                     </li>
                                 </ul>
                             </nav>
@@ -815,16 +815,13 @@
                                         <a class="list-title medium-ninteen" href="#">Информация</a>
                                     </li>
                                     <li class="footer-menu__list__item">
-                                        <a class="light-seventeen" href="#">О компании</a>
+                                        <a class="light-seventeen" href="about.html">О компании</a>
                                     </li>
                                     <li class="footer-menu__list__item">
-                                        <a class="light-seventeen" href="#">Контакты</a>
+                                        <a class="light-seventeen" href="contact.html">Контакты</a>
                                     </li>
                                     <li class="footer-menu__list__item">
-                                        <a class="light-seventeen" href="#">Вакансии</a>
-                                    </li>
-                                    <li class="footer-menu__list__item">
-                                        <a class="light-seventeen" href="#">Поддержка?</a>
+                                        <a class="light-seventeen" href="contact.html">Поддержка</a>
                                     </li>
                                 </ul>
                             </nav>
@@ -882,13 +879,13 @@
                             <nav class="footer-menu-bottom">
                                 <ul class="footer-menu-bottom__list">
                                     <li class="footer-menu-bottom__list__item">
-                                        <a class="lights-fiveteen" href="#">Постовщикам</a>
+                                        <a class="lights-fiveteen" href="answer-questions.html">Постовщикам</a>
                                     </li>
                                     <li class="footer-menu-bottom__list__item">
-                                        <a class="lights-fiveteen" href="#">Как купить?</a>
+                                        <a class="lights-fiveteen" href="answer-questions.html">Как купить?</a>
                                     </li>
                                     <li class="footer-menu-bottom__list__item">
-                                        <a class="lights-fiveteen" href="#">Поддержка</a>
+                                        <a class="lights-fiveteen" href="contact.html">Поддержка</a>
                                     </li>
                                 </ul>
                             </nav>
