--- a/app/like.html
+++ b/app/like.html
@@ -426,6 +426,7 @@
                         <div class="like__products__list__item__add-to-cart">
                            <p class="like-date">Добавлен: 16 Декабря 2020</p>
                            <a href="#" class="el-form__button"><span>Добавить</span> <i>в</i> корзину</a>
+                           <a href="#" class="stroke-button-dark delete-but">Удалить</a>
                         </div>
                   </li>
                   <li class="like__products__list__item">
@@ -445,6 +446,7 @@
                      <div class="like__products__list__item__add-to-cart">
                         <p class="like-date">Добавлен: 16 Декабря 2020</p>
                         <a href="#" class="el-form__button"><span>Добавить</span> <i>в</i> корзину</a>
+                        <a href="#" class="stroke-button-dark delete-but">Удалить</a>
                      </div>
                   </li>
                   <li class="like__products__list__item">
@@ -464,6 +466,7 @@
                      <div class="like__products__list__item__add-to-cart">
                         <p class="like-date">Добавлен: 16 Декабря 2020</p>
                         <a href="#" class="el-form__button"><span>Добавить</span> <i>в</i> корзину</a>
+                        <a href="#" class="stroke-button-dark delete-but">Удалить</a>
                      </div>
                   </li>
                   <li class="like__products__list__item">
@@ -483,6 +486,7 @@
                      <div class="like__products__list__item__add-to-cart">
                         <p class="like-date">Добавлен: 16 Декабря 2020</p>
                         <a href="#" class="el-form__button"><span>Добавить</span> <i>в</i> корзину</a>
+                        <a href="#" class="stroke-button-dark delete-but">Удалить</a>
                      </div>
                   </li>
                </ul>
