--- a/app/product.html
+++ b/app/product.html
@@ -17,13 +17,13 @@
             <nav class="fullscreen-menu__nav">
                 <ul class="fullscreen__nav__list">
                     <li class="fullscreen__nav__list__item">
-                        <a class="regular-ninteen" href="#">Главная</a>
+                        <a class="regular-ninteen" href="index.html">Главная</a>
                         <span class="arrow-cover">
                             <img class="arrow" src="img/Icon/Dark/next.svg" alt="icon">
                         </span>
                     </li>
                     <li class="fullscreen__nav__list__item curent-hover">
-                        <a class="regular-ninteen" href="#">Товары</a>
+                        <a class="regular-ninteen" href="product.html">Товары</a>
                         <span class="arrow-cover">
                             <img class="arrow" src="img/Icon/Dark/next.svg" alt="icon">
                         </span>
@@ -66,13 +66,13 @@
                         </ul>
                     </li>
                     <li class="fullscreen__nav__list__item">
-                        <a class="regular-ninteen" href="#">Контакты</a>
+                        <a class="regular-ninteen" href="contact.html">Контакты</a>
                         <span class="arrow-cover">
                             <img class="arrow" src="img/Icon/Dark/next.svg" alt="icon">
                         </span>
                     </li>
                     <li class="fullscreen__nav__list__item">
-                        <a class="regular-ninteen" href="#">О нас</a>
+                        <a class="regular-ninteen" href="about.html">О нас</a>
                         <span class="arrow-cover">
                             <img class="arrow" src="img/Icon/Dark/next.svg" alt="icon">
                         </span>
@@ -283,9 +283,9 @@
                         </nav>    
                         <nav class="site-menu">       
                             <ul class="site-menu__links">
-                                <li><a class="light-thirteen" href="#">Оплата и доставка</a></li>
-                                <li><a class="light-thirteen" href="#">Как купить?</a></li>
-                                <li><a class="light-thirteen" href="#">Поддержка</a></li>
+                                <li><a class="light-thirteen" href="answer-questions.html">Оплата и доставка</a></li>
+                                <li><a class="light-thirteen" href="answer-questions.html">Как купить?</a></li>
+                                <li><a class="light-thirteen" href="contact.html">Поддержка</a></li>
                             </ul>
                         </nav>                  
                     </div>
@@ -318,7 +318,7 @@
                                 <ul class="main-menu__links">
                                     <li class="main-menu__item"><a class="regular-seventeen" href="index.html">Главная</a></li>
                                     <li class="main-menu__item">
-                                        <a class="regular-seventeen" href="#">Товары</a>
+                                        <a class="regular-seventeen" href="product.html">Товары</a>
                                         <ul class="sub-nav">
                                             <li class="sub-nav__item">
                                                 <a class="medium-ninteen" href="#">Категории</a>
@@ -348,8 +348,8 @@
                                             </li>
                                         </ul>
                                     </li>
-                                    <li class="main-menu__item"><a class="regular-seventeen" href="#">Контакты</a></li>
-                                    <li class="main-menu__item"><a class="regular-seventeen" href="#">О нас</a></li>
+                                    <li class="main-menu__item"><a class="regular-seventeen" href="contact.html">Контакты</a></li>
+                                    <li class="main-menu__item"><a class="regular-seventeen" href="about.html">О нас</a></li>
                                 </ul>
                             </nav>
                         </div>
@@ -917,16 +917,16 @@
                                             <a class="list-title medium-ninteen" href="#">Покупателям</a>
                                         </li>
                                         <li class="footer-menu__list__item">
-                                            <a class="light-seventeen" href="#">Доставка и оплата</a>
+                                            <a class="light-seventeen" href="answer-questions.html">Доставка и оплата</a>
                                         </li>
                                         <li class="footer-menu__list__item">
-                                            <a class="light-seventeen" href="#">Возврат</a>
+                                            <a class="light-seventeen" href="answer-questions.html">Возврат</a>
                                         </li>
                                         <li class="footer-menu__list__item">
-                                            <a class="light-seventeen" href="#">Отзывы</a>
+                                            <a class="light-seventeen" href="about.html">Отзывы</a>
                                         </li>
                                         <li class="footer-menu__list__item">
-                                            <a class="light-seventeen" href="#">Как купить?</a>
+                                            <a class="light-seventeen" href="answer-questions.html">Как купить?</a>
                                         </li>
                                     </ul>
                                 </nav>
@@ -938,16 +938,13 @@
                                             <a class="list-title medium-ninteen" href="#">Информация</a>
                                         </li>
                                         <li class="footer-menu__list__item">
-                                            <a class="light-seventeen" href="#">О компании</a>
+                                            <a class="light-seventeen" href="about.html">О компании</a>
                                         </li>
                                         <li class="footer-menu__list__item">
-                                            <a class="light-seventeen" href="#">Контакты</a>
+                                            <a class="light-seventeen" href="contact.html">Контакты</a>
                                         </li>
                                         <li class="footer-menu__list__item">
-                                            <a class="light-seventeen" href="#">Вакансии</a>
-                                        </li>
-                                        <li class="footer-menu__list__item">
-                                            <a class="light-seventeen" href="#">Поддержка?</a>
+                                            <a class="light-seventeen" href="contact.html">Поддержка</a>
                                         </li>
                                     </ul>
                                 </nav>
@@ -1005,13 +1002,13 @@
                                 <nav class="footer-menu-bottom">
                                     <ul class="footer-menu-bottom__list">
                                         <li class="footer-menu-bottom__list__item">
-                                            <a class="lights-fiveteen" href="#">Постовщикам</a>
+                                            <a class="lights-fiveteen" href="answer-questions.html">Постовщикам</a>
                                         </li>
                                         <li class="footer-menu-bottom__list__item">
-                                            <a class="lights-fiveteen" href="#">Как купить?</a>
+                                            <a class="lights-fiveteen" href="answer-questions.html">Как купить?</a>
                                         </li>
                                         <li class="footer-menu-bottom__list__item">
-                                            <a class="lights-fiveteen" href="#">Поддержка</a>
+                                            <a class="lights-fiveteen" href="contact.html">Поддержка</a>
                                         </li>
                                     </ul>
                                 </nav>
